<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2015 LAM Creations
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="scaffold_open_drawer">Open Drawer</string>
    <string name="scaffold_close_drawer">Close Drawer</string>
    <string name="scaffold_bottom_navigation_item_1">Item 1</string>
    <string name="scaffold_bottom_navigation_item_2">Item 2</string>
    <string name="scaffold_bottom_navigation_item_3">Item 3</string>
    <string name="scaffold_bottom_navigation_item_4">Item 4</string>
    <string name="scaffold_bottom_navigation_item_5">Item 5</string>
    <string name="scaffold_navigation_item_1">Navigation Item 1</string>
    <string name="scaffold_navigation_item_2">Navigation Item 2</string>
    <string name="scaffold_navigation_item_3">Navigation Item 3</string>
    <string name="scaffold_navigation_item_4">Navigation Item 4</string>
    <string name="scaffold_navigation_item_5">Navigation Item 5</string>
    <string name="scaffold_navigation_header">Header</string>
    <string name="scaffold_navigation_sub_item_1">Navigation Sub Item 1</string>
    <string name="scaffold_navigation_sub_item_2">Navigation Sub Item 2</string>
    <string name="scaffold_navigation_sub_item_3">Navigation Sub Item 3</string>
    <string name="scaffold_navigation_sub_item_4">Navigation Sub Item 4</string>
    <string name="scaffold_navigation_sub_item_5">Navigation Sub Item 5</string>
    <string name="scaffold_clear_search">Clear</string>
    <string name="scaffold_voice_search">Voice Search</string>
    <string name="scaffold_icon">Icon</string>
    <string name="scaffold_splash_image">Splash Screen Image</string>
    <string name="scaffold_empty" />
</resources>
